# Invex

./: Cargo.toml  build_plugins.sh  install.sh  run.sh
.devcontainer/: .env  devcontainer.json  docker-compose.yml
invex-client/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
invex-client/src/: App.tsx  main.tsx
invex-client/src/components/: fields.tsx  fileIcon.tsx  icon.tsx  iconPicker.tsx  pluginFields.tsx
invex-client/src/context/net/: Provider.tsx  index.ts  types.ts
invex-client/src/context/net/methods/: auth.ts  base.ts  client.ts  files.ts  invites.ts  plugins.ts  service.ts  users.ts
invex-client/src/context/refresh/: index.ts  provider.tsx  types.ts
invex-client/src/lang/: en.json
invex-client/src/modals/: AddPluginModal.tsx  AddServiceGrantModal.tsx  AddServiceModal.tsx  CreateInviteModal.tsx  CreateUserModal.tsx  LoginModal.tsx  PluginProfilesModal.tsx  UpdateServiceModal.tsx  index.ts  index.tsx
invex-client/src/styles/: index.scss
invex-client/src/styles/components/: components.index.scss  iconpicker.scss  modals.scss
invex-client/src/styles/views/: admin.scss  home.scss  index.views.scss  invites.scss  layout.scss  views.index.scss
invex-client/src/types/: auth.ts  client.ts  files.ts  invite.ts  plugin.ts  service.ts
invex-client/src/util/: funcs.ts  hooks.ts  localization.tsx  notifications.tsx  routes.tsx  selectFile.ts  theme.ts
invex-client/src/views/admin/: AdminPage.tsx  InvitePanel.tsx  PluginPanel.tsx  ServiceConfig.tsx  ServicePanel.tsx  UserPanel.tsx
invex-client/src/views/admin/grants/: AttachmentGrantEditor.tsx  GrantEditor.tsx  MessageGrantEditor.tsx  PluginGrantEditor.tsx
invex-client/src/views/client/manage/: GrantItems.tsx  InviteItems.tsx  InviteManager.tsx  types.ts
invex-client/src/views/client/manage/render/: AttachmentItem.tsx  MessageItem.tsx  PluginItem.tsx
invex-client/src/views/client/redeem/: RedeemInvite.tsx
invex-client/src/views/home/: HomePage.tsx
invex-client/src/views/layout/: Layout.tsx
invex-sdk/: Cargo.toml
invex-sdk/src/: call.rs  lib.rs  params.rs
invex-server/: Cargo.toml  Rocket.toml
invex-server/invex-macros/: Cargo.toml
invex-server/invex-macros/src/: lib.rs
invex-server/migration/src/: lib.rs
invex-server/src/: config.rs  main.rs
invex-server/src/controllers/: auth.rs  client.rs  files.rs  index.rs  invite.rs  mod.rs  plugins.rs  services.rs  users.rs
invex-server/src/models/: auth.rs  client.rs  error.rs  invite.rs  mod.rs  plugin.rs  server.rs  service.rs
invex-server/src/util/: crypto.rs  database.rs  guards.rs  mod.rs  plugins.rs
plugins/jellyfin/: Cargo.toml
plugins/jellyfin/src/: lib.rs  models.rs  net.rs
plugins/test/: Cargo.toml
plugins/test/src/: lib.rs
