[package]
name = "invex-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
extism = "1.9.0"
rbatis = "4.5.37"
rbdc-pg = "4.5.16"
rbdc-sqlite = "4.5.5"
rbs = "4.5.24"
rocket = { version = "0.5.1", features = ["serde_json", "uuid", "json", "tls", "secrets"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
