[package]
name = "invex-plugin-jellyfin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
serde = { version = "1", features = ["derive"] }
invex-sdk = {path = "../../invex-sdk"}
serde_json = "1.0.133"
